tests/NormalTests/paczka2/big_fuzzy/22685139.err
Error in line 1: wYR A275 15,2
Error in line 3: oTBkhUBk A320 65,4
Error in line 2: wYR S486 77,2
Error in line 4: oTBkhUBk S486 63,0
Error in line 5: wYR A275 24,9
Error in line 21: wYR A275 42,8
Error in line 23: EBK0MPzB53I S560 43,3
Error in line 27: EBK0MPzB53I A275 9,2
Error in line 26: O6RyEMUMlVY S486 68,3
Error in line 30: EBK0MPzB53I S560 54,0
Error in line 35: EBK0MPzB53I A320 67,1
Error in line 44: A275 A320 69,2
Error in line 45: wYR A275 57,1
Error in line 50: wYR A320 2,4
Error in line 48: A275 S560 34,9
Error in line 54: A275 S486 41,6
Error in line 47: EQkmwHp A320 20,0
Error in line 72: EBK0MPzB53I A320 72,8
Error in line 77: EBK0MPzB53I S486 40,4
Error in line 84: O6RyEMUMlVY S486 9,4
Error in line 89: EQkmwHp A320 21,7
Error in line 99: EQkmwHp S486 63,1
Error in line 102: O6RyEMUMlVY S560 30,8
Error in line 92: EBK0MPzB53I S560 81,9
Error in line 110: EBK0MPzB53I S486 46,9
Error in line 118: oTBkhUBk A275 6,6
Error in line 109: I5Hj S560 10,9
Error in line 140: oTBkhUBk A320 25,3
Error in line 142: oTBkhUBk A275 14,3
Error in line 141: I5Hj A320 99,2
Error in line 150: EBK0MPzB53I S560 25,6
Error in line 145: A275 A275 23,3
Error in line 158: O6RyEMUMlVY S486 43,0
Error in line 174: EBK0MPzB53I S560 28,6
Error in line 175: EBK0MPzB53I A320 70,4
Error in line 176: EBK0MPzB53I S486 48,3
Error in line 172: A275 S486 83,5
Error in line 168: I5Hj A275 87,7
Error in line 198: O6RyEMUMlVY A320 46,2
Error in line 199: O6RyEMUMlVY S560 32,1
Error in line 202: EQkmwHp S560 38,4
Error in line 207: A275 S486 72,2
Error in line 190: I5Hj A320 91,8
Error in line 214: O6RyEMUMlVY S486 75,7
Error in line 226: A275 S486 44,4
Error in line 219: EQkmwHp S560 37,6
Error in line 228: wYR S560 15,7
Error in line 221: I5Hj S486 9,8
Error in line 230: EQkmwHp A275 51,5
